logs/dag_id=PROJET/run_id=manual__2023-11-20T19:45:30.909307+00:00/task_id=create_table/attempt=1.log
[2023-11-20T19:45:31.900+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet.create_table manual__2023-11-20T19:45:30.909307+00:00 [queued]>
[2023-11-20T19:45:31.908+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet.create_table manual__2023-11-20T19:45:30.909307+00:00 [queued]>
[2023-11-20T19:45:31.909+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-11-20T19:45:31.921+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-20 19:45:30.909307+00:00
[2023-11-20T19:45:31.927+0000] {standard_task_runner.py:57} INFO - Started process 484 to run task
[2023-11-20T19:45:31.930+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet', 'create_table', 'manual__2023-11-20T19:45:30.909307+00:00', '--job-id', '10', '--raw', '--subdir', 'DAGS_FOLDER/test.py', '--cfg-path', '/tmp/tmp0akp72p5']
[2023-11-20T19:45:31.934+0000] {standard_task_runner.py:85} INFO - Job 10: Subtask create_table
[2023-11-20T19:45:31.977+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet.create_table manual__2023-11-20T19:45:30.909307+00:00 [running]> on host 272b4ce7c03d
[2023-11-20T19:45:32.221+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-20T19:45:30.909307+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-20T19:45:30.909307+00:00'
[2023-11-20T19:45:32.222+0000] {sql.py:274} INFO - Executing: CREATE TABLE IF NOT EXISTS tranches_dage(
      Code_tranches_dage VARCHAR(10),
      Age INT,
      PRIMARY KEY (Code_tranches_dage )
    );

CREATE TABLE IF NOT EXISTS departements (
    num_dep VARCHAR(5),
    dep_name VARCHAR(50),
    region_name VARCHAR(50),
    PRIMARY KEY (num_dep)
   );

CREATE TABLE IF NOT EXISTS passages_corona (
    dep VARCHAR(5),
    date_de_passage DATE,
    sursaud_cl_age_corona INT,
    nbre_pass_corona INT,
    nbre_pass_tot INT,
    nbre_hospit_corona INT,
    nbre_pass_corona_h INT,
    nbre_pass_corona_f INT,
    nbre_pass_tot_h INT,
    nbre_pass_tot_f INT,
    nbre_hospit_corona_h INT,
    nbre_hospit_corona_f INT,
    nbre_acte_corona INT,
    nbre_acte_tot INT,
    nbre_acte_corona_h INT,
    nbre_acte_corona_f INT,
    nbre_acte_tot_h INT,
    nbre_acte_tot_f INT,
    PRIMARY KEY (date_de_passage, sursaud_cl_age_corona),
    FOREIGN KEY (dep) REFERNCES departements(num_dep),
    FOREIGN KEY (sursaud_cl_age_corona) REFERNCES tranches_dage(Code_tranches_dage )
);
[2023-11-20T19:45:32.232+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-20T19:45:32.240+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-20T19:45:32.254+0000] {sql.py:418} INFO - Running statement: CREATE TABLE IF NOT EXISTS tranches_dage(
      Code_tranches_dage VARCHAR(10),
      Age INT,
      PRIMARY KEY (Code_tranches_dage )
    );

CREATE TABLE IF NOT EXISTS departements (
    num_dep VARCHAR(5),
    dep_name VARCHAR(50),
    region_name VARCHAR(50),
    PRIMARY KEY (num_dep)
   );

CREATE TABLE IF NOT EXISTS passages_corona (
    dep VARCHAR(5),
    date_de_passage DATE,
    sursaud_cl_age_corona INT,
    nbre_pass_corona INT,
    nbre_pass_tot INT,
    nbre_hospit_corona INT,
    nbre_pass_corona_h INT,
    nbre_pass_corona_f INT,
    nbre_pass_tot_h INT,
    nbre_pass_tot_f INT,
    nbre_hospit_corona_h INT,
    nbre_hospit_corona_f INT,
    nbre_acte_corona INT,
    nbre_acte_tot INT,
    nbre_acte_corona_h INT,
    nbre_acte_corona_f INT,
    nbre_acte_tot_h INT,
    nbre_acte_tot_f INT,
    PRIMARY KEY (date_de_passage, sursaud_cl_age_corona),
    FOREIGN KEY (dep) REFERNCES departements(num_dep),
    FOREIGN KEY (sursaud_cl_age_corona) REFERNCES tranches_dage(Code_tranches_dage )
);, parameters: None
[2023-11-20T19:45:32.259+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "REFERNCES"
LINE 34:     FOREIGN KEY (dep) REFERNCES departements(num_dep),
                               ^

[2023-11-20T19:45:32.267+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Projet, task_id=create_table, execution_date=20231120T194530, start_date=20231120T194531, end_date=20231120T194532
[2023-11-20T19:45:32.279+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 10 for task create_table (syntax error at or near "REFERNCES"
LINE 34:     FOREIGN KEY (dep) REFERNCES departements(num_dep),
                               ^
; 484)
[2023-11-20T19:45:32.304+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-20T19:45:32.320+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
